--- a/Changes
+++ b/Changes
@@ -4,5 +4,8 @@ Revision history for Perl extension SQL::Reporter::Excel.
 	- original version; created by h2xs 1.23 with options
 		-XA -n SQL::Reporter::Excel
 
-      Aptr 7, 2009
+      Apr 7, 2009
         - completed coding version 0.1
+
+0.1.1 Apr, 8, 2009
+        - small fixes
