--- a/Changes
+++ b/Changes
@@ -1,5 +1,14 @@
 Revision history for Perl extension DBIx::Report::Excel.
 
+0.2 Thu Nov 25 13:09:15 JST 2010
+	- bug fix release, fixed
+	  https://rt.cpan.org/Ticket/Display.html?id=60913
+	  https://rt.cpan.org/Ticket/Display.html?id=60912
+   	  https://rt.cpan.org/Ticket/Display.html?id=48655
+
+0.1b Fri Jul 24 10:58:46 JST 2009
+	- Spreadsheet::WriteExcel dependency fixed
+
 0.1  Tue Mar 31 19:00:27 2009
 	- original version; created by h2xs 1.23 with options
 		-XA -n DBIx::Report::Excel
