--- a/Changes
+++ b/Changes
@@ -1,8 +1,12 @@
 Revision history for Perl extension DBIx::Report::Excel.
 
+0.3  TO BE RELEASED
+    - Use numeric version number
+
 0.2a Sun Nov 28 12:12:45 JST 2010
 	- Spreadsheet::WriteExcel lost dependency fixed
-0.2 Thu Nov 25 13:09:15 JST 2010
+
+0.2  Thu Nov 25 13:09:15 JST 2010
 	- bug fix release, fixed
 	  https://rt.cpan.org/Ticket/Display.html?id=60913
 	  https://rt.cpan.org/Ticket/Display.html?id=60912
