--- a/Changes
+++ b/Changes
@@ -1,6 +1,10 @@
 Revision history for Perl extension DBIx::Report::Excel.
 
-0.3  TO BE RELEASED
+0.3 Sat Dec 10 10:16:22 JST 2011
+    - Fix for SQL::Parser > 1.24 SQL::Parser don't have 'column_names' attr.
+      https://rt.cpan.org/Public/Bug/Display.html?id=68606
+      https://rt.cpan.org/Public/Bug/Display.html?id=73136
+    - example.pl made into test
     - Use numeric version number
 
 0.2a Sun Nov 28 12:12:45 JST 2010
